Adapting images to screen size

--- a/mydidata/templates/mydidata/topic_detail.html
+++ b/mydidata/templates/mydidata/topic_detail.html
@@ -16,12 +16,12 @@
   
         </div>    
         {# List Questions #}
-        <div id="cd-container" class="ad-container">
+        <div id="cd-container" >
             <div class="ad-headers">
                 <h4 class="ad-mh m-none">Questões</h4>
             </div>
             <div id="cd-body" class="row">
-                <table id="cd-table" class="table table-hover">
+                <table id="cd-table" class="table">
                     <tbody>
                         <tr></tr>
                         {% for question in questions %}
