--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -35,7 +35,7 @@
             {% block head_css_page %}{% endblock head_css_page %}
         {% endblock head_css %}
         <script data-ad-client="pub-3262579547697172" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     </head>
     
     <body>
