--- a/mydidata/templates/mydidata/topic_detail.html
+++ b/mydidata/templates/mydidata/topic_detail.html
@@ -24,7 +24,7 @@
             </div>
 
         </div>
-        {% if user.is_authenticated %}
+        {% if user.is_authenticated and question %}
             <hr class="my-3" />
             <div>
                 <h4 class="ad-mh m-none"> Para certificação, selecione e envie o arquivo elaborado neste tutorial </h4>
