Answer processing refactoring

--- a/mydidata/templates/mydidata/discursive_answer_item_form.html
+++ b/mydidata/templates/mydidata/discursive_answer_item_form.html
@@ -4,7 +4,8 @@
 
 
 
-{% if answer.feedback %}
+
+{% if answer and answer.feedback %}
     <h3 class="gi-sh">Correções Solicitadas</h3>
     <p><font color='red'>{{ answer.feedback | safe}}</font></p>
 {% endif %}
