--- a/mydidata/templates/mydidata/answer_cru.html
+++ b/mydidata/templates/mydidata/answer_cru.html
@@ -19,11 +19,19 @@
 		{% endif %}
 		
         <h2 class="ad-mh">Resposta de: {{user.first_name}}&nbsp;{{user.last_name}}</h2>
+		{% with answer=form.instance%}
+			<div id="answer_form">
+				{% include 'mydidata/discursive_answer_item_form.html' %}
+			</div>
 
-        {%if question.is_discursive%}
-            {% include 'mydidata/discursive_answer_item_form.html' %}
-        {%else%}
-            {% include 'mydidata/multiple_choice_answer_item_form.html' %}
-        {%endif%}
+		{%endwith%}
     </div>
 {% endblock content %}
+
+{% block footer_javascript_page %}
+	<script>
+		$('#answer_form ul').addClass('list-group');
+		$('#answer_form ul li').addClass('list-group-item');
+	</script>
+
+{% endblock footer_javascript_page %}
