--- a/mydidata/templates/mydidata/test_progress.html
+++ b/mydidata/templates/mydidata/test_progress.html
@@ -14,6 +14,7 @@
                 <h2>{{test.title}}</h2>
 
             {%endif%}
+            <h2>{{test.title}}</h2>
             <table id="cd-table" class="table table-hover">
                 <tbody>
                     <tr>
@@ -25,25 +26,24 @@
                     {% for student in students%}
                         {%get_test_user student_grades student as test_user%}
                         <tr>
-                            <td>{{student.first_name}}</td>
+                            <td>{{student}}</td>
                             
                             {%for question in test_user.current_questions %}
-                                <!-- {{question.question_text}} -->
+                                
                                 {% get_answers question student test as answers%}
                                 
                                 {%if answers%}
                                     {%for answer in answers%}
-                                        {%get_specific_answer answer as specific_answer%}
-                                        
                                         <td>
-                                            {%if specific_answer.is_sent%}
-                                                 <a href="{{specific_answer.get_detail_url}}"><i class="fa fa-paper-plane"></i></a>
+                                            
+                                            {%if answer.is_sent%}
+                                                 <a href="{{answer.get_detail_url}}"><i class="fa fa-paper-plane"></i></a>
                                             {%else%}
-                                                {%if specific_answer.is_ok%}
-                                                 <a href="{{specific_answer.get_detail_url}}"><i class="fa fa-check-circle"></i></span></a>
+                                                {%if answer.is_ok%}
+                                                 <a href="{{answer.get_detail_url}}"><i class="fa fa-check-circle"></i></span></a>
                                                 
                                                  {%else%}
-                                                     <a href="{{specific_answer.get_detail_url}}"><i class="fas fa-times-circle"></i></a>
+                                                     <a href="{{answer.get_detail_url}}"><i class="fas fa-times-circle"></i></a>
                                                  {%endif%}
                                             {%endif%}
                                         </td>
