--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -106,8 +106,8 @@
                   </li>
                   <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:my_progress' %}"
                     >Meu Progresso</a></li>
-                  <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:tests' %}"                    
-                    >Avaliações</a></li>
+                  <!-- <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:tests' %}"                    
+                    >Avaliações</a></li> -->
                 {% if user.is_authenticated %}
                     <li class="nav-item active"><a class="nav-link" href="/mydidata/logout/">Sair</a></li>
                 {%endif%}    
