--- a/mydidata/templates/mydidata/topic_progress.html
+++ b/mydidata/templates/mydidata/topic_progress.html
@@ -46,16 +46,16 @@
                                 {% get_answers question student as answers%}
                                 {%if answers%}
                                     {%for answer in answers%}
-                                        
                                         <td>
+                                            
                                             {%if answer.is_sent%}
-                                                 <a href="{{answer.get_detail_url}}"><span class="glyphicon glyphicon-send"></span></a>
+                                                 <a href="{{answer.get_detail_url}}"><i class="fa fa-paper-plane"></i></a>
                                             {%else%}
                                                 {%if answer.is_ok%}
-                                                 <a href="{{answer.get_detail_url}}"><span class="glyphicon glyphicon-ok"></span></a>
+                                                 <a href="{{answer.get_detail_url}}"><i class="fa fa-check-circle"></i></span></a>
                                                 
                                                  {%else%}
-                                                     <a href="{{answer.get_detail_url}}"><span class="glyphicon glyphicon-remove"></span></a>
+                                                     <a href="{{answer.get_detail_url}}"><i class="fas fa-times-circle"></i></a>
                                                  {%endif%}
                                             {%endif%}
                                         </td>
