Impedindo usuários de enviarem novas respostas após finalizado o teste

--- a/mydidata/templates/mydidata/multiple_choice_answer_item_form.html
+++ b/mydidata/templates/mydidata/multiple_choice_answer_item_form.html
@@ -2,8 +2,8 @@
 
 <p>{{ question.question_text | safe}}</p>
 {% if error_message %}
-    <div class="alert alert-danger">
-        <strong>{{ error_message }}</strong>
+    <div class="alert alert-danger" role="alert">
+        {{ error_message }}
     </div>
 
 {% endif %}
