--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -23,7 +23,7 @@
                 <div class="carousel-caption text-left">
                   <h3>Planilhas trabalhando por você </h3>
                   <p>Domine planilhas eletrônicas e ganhe mais tempo para o que importa.</p>
-                  <p><a class="btn btn-md btn-primary" href="/mydidata/signup/66" role="button">Cadastre-se gratuitamente!</a></p>
+                  <p><a class="btn btn-md btn-primary" href="/mydidata/topic_detail/zXPoe3cQUezaZ2ka6kKxRa/" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
               </div>
             </div>
@@ -33,7 +33,7 @@
                 <div class="carousel-caption text-left">
                   <h3>A Internet ao seu dispor </h3>
                   <p><span >Domine a Internet e as principais ferramentas online.</span></p>
-                  <p><a class="btn btn-md btn-primary" href="/mydidata/signup/66" role="button">Cadastre-se gratuitamente!</a></p>
+                  <p><a class="btn btn-md btn-primary" href="/mydidata/topic_detail/zXPoe3cQUezaZ2ka6kKxRa/" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
               </div>
             </div>
@@ -44,7 +44,7 @@
                   <h3><span>Documentos e Apresentações Profissionais</span></h3>
                   <p><span>Crie uma boa impressão com apresentações de tirar o fôlego!</span></p>
                   
-                  <p><a class="btn btn-md btn-primary" href="/mydidata/signup/66" role="button">Cadastre-se gratuitamente!</a></p>
+                  <p><a class="btn btn-md btn-primary" href="/mydidata/topic_detail/zXPoe3cQUezaZ2ka6kKxRa/" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
               </div>
             </div>
