--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -1,4 +1,4 @@
-{# HTML5 declaration #}
+'{# HTML5 declaration #}
 <!DOCTYPE html>
 <html>
     {# Make modifiable head elements #}
@@ -94,12 +94,21 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
+                    {%if user.is_authenticated%}
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/mydidata">Bem vindo {{user.first_name}}!</a>
+                        </li>
+
+
+                    {%endif%}
                   <li class="nav-item active">
                     <a class="nav-link" href="/mydidata">Home <span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="/mydidata/login/">Login</a>
-                  </li>
+                  {% if not user.is_authenticated%}
+                    <li class="nav-item active">
+                        <a class="nav-link" href="/mydidata/login/">Login</a>
+                    </li>
+                  {%endif%}
                   <li class="nav-item active">
                     <a class="nav-link" href="{% url 'mydidata:disciplines' %}"
                                    >Assuntos</a>
@@ -178,3 +187,4 @@
         {% block footer_javascript_page %}{% endblock footer_javascript_page %}
     {% endblock footer_javascript %}
 </html>
+'
