--- a/mydidata/templates/mydidata/home.html
+++ b/mydidata/templates/mydidata/home.html
@@ -18,7 +18,9 @@
                     <source class="first-slide" srcset="/static/images/s81640.jpg" media="(min-width: 577px)" type="image/jpeg">
                 </picture> -->
 
+              
               <img class="first-slide img-responsive" src="/static/images/s8.jpg" alt="First slide">
+              <div class="black-overlay"></div>
               <div class="container">
                 <div class="carousel-caption text-left">
                   <h3>Planilhas trabalhando por você </h3>
@@ -35,6 +37,7 @@
                   <p><span >Domine a Internet e as principais ferramentas online.</span></p>
                   <p><a class="btn btn-md btn-primary" href="/mydidata/topic_detail/zXPoe3cQUezaZ2ka6kKxRa/" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
+                <div class="black-overlay"></div>
               </div>
             </div>
             <div class="carousel-item">
@@ -47,6 +50,7 @@
                   <p><a class="btn btn-md btn-primary" href="/mydidata/topic_detail/zXPoe3cQUezaZ2ka6kKxRa/" role="button">Cadastre-se gratuitamente!</a></p>
                 </div>
               </div>
+              <div class="black-overlay"></div>
             </div>
           </div>
           <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
