--- a/mydidata/templates/mydidata/topic_progress.html
+++ b/mydidata/templates/mydidata/topic_progress.html
@@ -25,6 +25,7 @@
                     <h2>{{topic.topic_title}}</h2>
                     <h4><a href="{{close_url}}">Fechar</a></h4>
                 {%endif%}
+                <h4><a href="/mydidata/download_answers/{{topic.uuid}}/{{classroom.id}}"> Baixar Respostas </a></h4>
             {%else%}
                 <h2>{{topic.topic_title}}</h2>
             {%endif%}
