Link para retornar do teste para o tópico

--- a/mydidata/templates/mydidata/test_progress.html
+++ b/mydidata/templates/mydidata/test_progress.html
@@ -80,6 +80,7 @@
                 
                 {% for student, student_status in student_grades.items %}
                     <h1>Aproveitamento: {{student_status.grade}}</h1>
+                    <h2> <a href="{{test.topic.get_absolute_url}}"> Clique para retornar</a></h2>
                     <!-- {%if assessment.success %}
                         <div class="alert alert-success">
                             {{assessment.success}}
