--- a/mydidata/templates/mydidata/question_item_view.html
+++ b/mydidata/templates/mydidata/question_item_view.html
@@ -8,7 +8,7 @@
         {# Question Edit Link #}
         
             <a class="pen"
-               href="{{ question.get_answer_url }}"></a>
+               href="{{ question.get_answer_url }}"><i class="fas fa-pencil-alt"></i></a>
         
     </td>
     
