--- a/mydidata/templates/mydidata/base.html
+++ b/mydidata/templates/mydidata/base.html
@@ -67,7 +67,7 @@
                                     >Assuntos</a>
                     </li>
                     <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:my_progress' %}"
-                    >Meu Progresso</a></li>
+                    >Atividades</a></li>
                     {%if user.is_superuser%}
                         <li class="nav-item active"><a class="nav-link" href="{% url 'mydidata:tests' %}"                    
                         >Avaliações</a></li>
