--- a/mydidata/templates/mydidata/my_progress.html
+++ b/mydidata/templates/mydidata/my_progress.html
@@ -4,10 +4,20 @@
     {% load question_extras %}
     {% load answer_extras %}
     {% load classroom_extras %}
+    {% load tz %}
     <div id="content-container" class="container p-none">
             {%for topic in topics%}
 
                 <h2>{{topic.topic_title}}</h2>
+                {%get_clasroom_list students as klasses%}
+                {% for klass in klasses%}
+                    {%get_deadline topic klass as deadline%}
+                    {% if deadline%}
+                        {% localtime on %}
+                            <h4>Data Limite para Envio das Tarefas: {{deadline}}</h4>
+                        {%endlocaltime%}
+                    {%endif%}
+                {%endfor%}
                 
                 <table id="cd-table" class="table table-hover">
                     <tbody>
