view para lançar no acadêmico

--- a/mydidata/templates/mydidata/percentage_progress.html
+++ b/mydidata/templates/mydidata/percentage_progress.html
@@ -38,6 +38,6 @@
                     
                 </tbody>
             </table>
-            <a herf='/mydidata/academico/{{classroom.id}}/{{topic.uuid}}'>Lançar no Acadêmico</a>
+            <a href='/mydidata/academico/{{classroom.id}}/{{topic.uuid}}'>Lançar no Acadêmico</a>
     </div>
 {% endblock %}
