--- a/mydidata/templates/mydidata/percentage_progress.html
+++ b/mydidata/templates/mydidata/percentage_progress.html
@@ -18,7 +18,7 @@
                         <th>Nota</th>
                         
                         {%for topic in topics %}                        
-                            <th>{{topic.topic_title}}</th>
+                            <th>{{topic.topic_title}}: <a href='/mydidata/academico/{{classroom.id}}/{{topic.uuid}}'>Lançar no Acadêmico</a></th>
                         {%endfor%}
                     </tr>
                     {% for s in topic_dict.keys%}
@@ -38,6 +38,6 @@
                     
                 </tbody>
             </table>
-            <a href='/mydidata/academico/{{classroom.id}}/{{topic.uuid}}'>Lançar no Acadêmico</a>
+            
     </div>
 {% endblock %}
