--- a/mydidata/templates/mydidata/progress.html
+++ b/mydidata/templates/mydidata/progress.html
@@ -9,27 +9,26 @@
 			<h1>{{classroom.name}}</h1>
 			<p>Compartilhe esse link com seus alunos para inscrição: https://mydidata.herokuapp.com{{classroom.get_signup_link}} </p>
 		{%endif%}
-		,
-        <ul id="al-group" class="strip-list">
+		
+        <ul class="list-group"role="tablist">
             {% for topic in topics %}
             {% get_progress_url classroom topic as progress_url%}
 
-                <li class="al-item">
+            <li class="list-group-item d-flex justify-content-between align-items-center">
                     {% get_close_url classroom topic as close_url %}
                     {% get_open_url classroom topic as open_url %}
                     {% get_assess_url classroom topic as assess_url %}
                     {% get_grades_url classroom topic as grades_url %}
                     {% is_topic_closed classroom topic as topic_closed %}
                     {% if topic_closed%}
-                        <a href="{{ progress_url }}"><h4 class="al-name">{{ topic.topic_title }} (Fechado)</h4></a> |                          
-                        <a href="{{open_url}}">Abrir</a>
+                        <a  href="{{ progress_url }}"><h4 class="al-name">{{ topic.topic_title }} (Fechado)</h4></a>
+                        
                     {%else%}
 
-                        <a href="{{ progress_url }}"><h4 class="al-name">{{ topic.topic_title }}</h4></a> |                   
-                        <a href="{{close_url}}">Fechar</a>
-                    {%endif%}
-                    | <a href="{{assess_url}}">Corrigir</a>
-                    | <a href="{{grades_url}}">Notas</a>
+                        <a  href="{{ progress_url }}"><h4 class="al-name">{{ topic.topic_title }}</h4></a>
+                       
+                    {%endif%}                    
+                    <a  href="{{grades_url}}"> Notas</a>
                 </li>
             {% endfor %}
         </ul>
